--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MentorApp</string>
+    <string name="title_activity_home_screen">"GitHub "</string>
+    <string name="action_settings">Settings</string>
+    <string name="communication_error_message">Communication error, try again.</string>
 </resources>
